--- a/js/app/templates/home/profile.html
+++ b/js/app/templates/home/profile.html
@@ -6,4 +6,5 @@
 <ul class="profile-updates">
    <li class="profile-update-item"><span class="count badge bg-color-red">{{user.srcData.length}}</span><span class="statement">SRC Events</span></li> 
    <li class="profile-update-item"><span class="count badge bg-color-red">{{user.trainingData.length}}</span><span class="statement">Trainings</span></li> 
+   <li class="profile-update-item"><span class="count loading"><img src="images/loading.gif"></span><span class="statement">Todo Tasks</span></li> 
 </ul>
