--- a/js/app/templates/partials/suggestion_modal.html
+++ b/js/app/templates/partials/suggestion_modal.html
@@ -2,17 +2,17 @@
     <div class="row">
        <div class="to item">
             <label class="radio-inline">
-              <input type="radio" class="input" name="receiver" value="campus_manager" checked> Campus Manager
+              <input type="radio" class="input" name="To" value="campus_manager" checked> Campus Manager
             </label>
             <label class="radio-inline">
-              <input type="radio" class="input" name="receiver" value="hr"> HR Specialist
+              <input type="radio" class="input" name="To" value="hr"> HR Specialist
             </label>    
        </div>
        <div class="subject item">
-            <input type="text" class="form-control input" name="subject" placeholder="enter the subject.">
+            <input type="text" class="form-control input" name="Subject" placeholder="enter the subject.">
        </div>
        <div class="content item">
-           <textarea class="form-control input" rows="20"  name="content" placeholder="Enter what you want to say here."></textarea>
+           <textarea class="form-control input" rows="20"  name="Body" placeholder="Enter what you want to say here."></textarea>
        </div>   
     </div>
 
