--- a/js/app/templates/profile/layout.html
+++ b/js/app/templates/profile/layout.html
@@ -2,6 +2,13 @@
     <div class="panel-head"><h1>Employee Profile</h1></div>
     <div class="panel-body"></div>
 </section>
+<section class="panel panel-list panel-tasks">
+    <div class="panel-head">
+        <h1><i class="fa fa-rss"></i> My Todo Tasks</h1>
+        <div class="panel-head-right"></div>
+    </div>
+    <div class="panel-body panel-task-list"></div>
+</section>
 <section class="panel panel-list panel-training">
     <div class="panel-head">
     	<h1><i class="fa fa-rss"></i> My booked training sessions</h1>
