--- a/js/app/templates/partials/traininglist.html
+++ b/js/app/templates/partials/traininglist.html
@@ -6,25 +6,21 @@
         <span class="trcode"><a class="trcode-link" href="javascript:;" data-toggle="popover" data-placement="top"  title="view training code" data-content="{{trainingcode}}"><i class="fa fa-key"></i></a></span>
         {{/ifCond}} -->
     </h4>
-		<span class="banner-right">
-      <span class="numjoined label" data-join-link="{{joinLink}}"><img src="images/loading.gif"/></span>
+	 <span class="banner-right">
+      <span class="numjoined-container "><a href="{{joinLink}}" class="numjoined label" target="_blank"><img src="images/loading.gif"/></a></span>
       {{#if available}}
           {{#if ../../noJoinLink}}
               
               {{#ifCond ../../../curUserId authorId}}
-                  <span class="btnJoin label label-default"> I am trainer </span>
+                  <span class="btnJoin label label-info"> I am trainer </span>
               {{else}}
-                  {{#if done}}
-                      <span class="text-muted"> attended </span>
-                  {{else}}
-                      <span class="btnJoin"><a href="#"  class="label label-success">Unregister</a></span>
-                  {{/if}}
+                  <span class="btnJoin"><a href="#" class="btn btn-success  btn-xs btn-cancel" data-index="{{@index}}">Unregister</a></span>
               {{/ifCond}}            
           {{else}}
-              <span class="btnJoin label label-default">register</span>
+              <span class="btnJoin label label-primary">Available</span>
           {{/if}}
       {{else}}
-          <span class="text-muted">closed</span>
+          <span class="btnJoin label label-default">Closed</span>
       {{/if}}  
     </span>
 	</div>
