--- a/css/app/state.css
+++ b/css/app/state.css
@@ -219,5 +219,6 @@
    text-align: center;
    font-weight: bolder;
    padding:10px 0;
-   background: #DCEEFC;
+   background: #fff;
+   color:#777;
 }
