--- a/js/app/templates/partials/empitem.html
+++ b/js/app/templates/partials/empitem.html
@@ -46,7 +46,7 @@
           <div class="title label label-default">direct reports</div>
           <ul class="items   list-inline">
                 {{#each contacts.relations.reportees}}
-                    <li><a href="#profile/{{id}}" class="profilelink" data-contactId="{{id}}">
+                    <li><a href="#profile/{{id}}" class="profilelink" data-contactId="{{nameRecordId}}">
                         <img src="{{photo}}" alt="" class="img-thumbnail img-circle" data-toggle="tooltip" data-placement="bottom" title="{{name}}"/>
                         </a>
                     </li>
