--- a/js/app/templates/general/listpagebase.html
+++ b/js/app/templates/general/listpagebase.html
@@ -26,7 +26,7 @@
           {{/each}}
 
           <section class="form-group clearfix">
-            <h1>keywords</h1>
+            <h1>Keywords</h1>
             <div class="form-controls">                
                 <input type="text" class="form-control inline-control"  size="50" name="keyword" placeholder="Enter keyword" />
                 <button type="submit" class="btn btn-primary btn-sm btnSubmit " data-search-text="Searching  ...">Search</button>
