--- a/js/app/templates/partials/contactlist.html
+++ b/js/app/templates/partials/contactlist.html
@@ -22,6 +22,6 @@
 {{/each}}
 {{else}}
 <tr>
-<td colspan="7" class="noresult">no results.</td>  
+<td colspan="7" class="noresult">No results.</td>  
 </tr>
 {{/if}}
