--- a/js/app/templates/partials/empitem.html
+++ b/js/app/templates/partials/empitem.html
@@ -17,11 +17,11 @@
         <p class="chinese">{{contacts.chinesename}}</p>
          <p class="title">{{contacts.title}}</p>
         <dl class="below dl-horizontal">
-            <dt>project</dt>
+            <dt>Project</dt>
             <dd>{{contacts.project}}</dd>
-            <dt>manager</dt>
+            <dt>Manager</dt>
             <dd>{{contacts.manager}}</dd>
-            <dt>team</dt>
+            <dt>Team</dt>
             <dd>{{contacts.team}}</dd>
             <dt>EXT number</dt>
             <dd>{{contacts.ext}}</dd>
