--- a/js/app/templates/partials/trainingpagelist.html
+++ b/js/app/templates/partials/trainingpagelist.html
@@ -17,6 +17,6 @@
 {{/each}}
 {{else}}
 <tr class="noresult">
-  <td colspan="7">no results.</td>
+  <td colspan="7">No results.</td>
 </tr>
 {{/if}}
