--- a/js/app/templates/partials/booklist.html
+++ b/js/app/templates/partials/booklist.html
@@ -11,6 +11,6 @@
 {{/each}}
 {{else}}
 <tr class="noresult">
-  <td colspan="4">no results.</td>
+  <td colspan="4">No results.</td>
 </tr>
 {{/if}}
