--- a/js/app/templates/partials/empitem.html
+++ b/js/app/templates/partials/empitem.html
@@ -18,13 +18,13 @@
          <p class="title">{{contacts.title}}</p>
         <dl class="below dl-horizontal">
             <dt>Project</dt>
-            <dd>{{contacts.project}}</dd>
+            <dd>{{contacts.project}} &nbsp;</dd>
             <dt>Manager</dt>
-            <dd>{{contacts.manager}}</dd>
+            <dd>{{contacts.manager}} &nbsp;</dd>
             <dt>Team</dt>
-            <dd>{{contacts.team}}</dd>
+            <dd>{{contacts.team}} &nbsp;</dd>
             <dt>EXT number</dt>
-            <dd>{{contacts.ext}}</dd>
+            <dd>{{contacts.ext}} &nbsp;</dd>
         </dl>
     </div>
 </div>
