--- a/js/app/templates/profile/layout.html
+++ b/js/app/templates/profile/layout.html
@@ -11,13 +11,13 @@
 </section>
 <section class="panel panel-list panel-training">
     <div class="panel-head">
-    	<h1><i class="fa fa-rss"></i> My booked training sessions</h1>
+    	<h1><i class="fa fa-rss"></i> My Training Sessions</h1>
     	<div class="panel-head-right"><a href="#/campus/trainings">view all of the training sessions<a/></div>
     </div>
     <div class="panel-body panel-training-list"></div>
 </section>
 <section class="panel panel-list panel-src">
-    <div class="panel-head"><h1><i class="fa fa-rss"></i> My joined SRC Events</h1>
+    <div class="panel-head"><h1><i class="fa fa-rss"></i> My SRC Events</h1>
     <div class="panel-head-right"><a href="#/campus/src">view all of the SRC Events<a/></div>
     </div>
     <div class="panel-body"></div>
