--- a/js/app/templates/partials/traininglist.html
+++ b/js/app/templates/partials/traininglist.html
@@ -2,11 +2,7 @@
 {{#each campus_training}}
 <div class="campus-item">
 	<div class="head">
-    <h4>{{title}}
-        <!--{{#ifCond ../curUserId authorId}}
-        <span class="trcode"><a class="trcode-link" href="javascript:;" data-toggle="popover" data-placement="top"  title="view training code" data-content="{{trainingcode}}"><i class="fa fa-key"></i></a></span>
-        {{/ifCond}} -->
-    </h4>
+    <h4>{{title}}</h4>
 	 <span class="banner-right">
       <span class="numjoined-container "><a href="{{joinLink}}" class="numjoined label" target="_blank"><img src="images/loading.gif"/></a></span>
       {{#if available}}
