--- a/css/app/state.css
+++ b/css/app/state.css
@@ -265,3 +265,25 @@
     background:none;
     color: #d9534f;
 }
+
+/*
+http://www.mademyday.de/css-height-equals-width-with-pure-css.html
+*/
+.contact-img-box{
+    position: relative;
+    width: 100%;     /* desired width */
+}
+
+.contact-img-box:before{
+    content: "";
+    display: block;
+    padding-top: 100%;  /* initial ratio of 1:1*/
+}
+
+.contact-img-box  img {
+    position:  absolute;
+    top: 0;
+    width:100%;
+    height: 100%;
+    left: 0;
+}
