--- a/js/app/templates/partials/pmimageitem.html
+++ b/js/app/templates/partials/pmimageitem.html
@@ -1,6 +1,6 @@
 <div class="content clearfix">
    <div class="item-image"><img src="{{image}}" class="img-responsive"></div>
     <div class="item-description">
-          <p>{{{description}}}</p>
+          <p>{{#if description}}{{{description}}}{{else}}No Description.{{/if}}</p>
     </div>
 </div>
