--- a/js/app/templates/home/news.html
+++ b/js/app/templates/home/news.html
@@ -17,7 +17,7 @@
                         <div class="col-md-3 panel-body-pic"><img src="{{imageUrl}}" class="img-responsive"></div>
                         <div class="col-md-9 panel-body-content">
                               <h4 class="article-title">{{title}}</h4>
-                              <p class="publisher">created by {{author}} at {{formatDate pubdate}}</p>
+                              <p class="publisher">created {{#if author}}by {{author}}{{/if}} at {{formatDate pubdate}}</p>
                               <div class="news-content" data-item-index="{{@index}}">{{{content}}}</div>
                         </div>
                     </div>
