--- a/js/app/templates/partials/officelayout.html
+++ b/js/app/templates/partials/officelayout.html
@@ -1,16 +1,22 @@
-<div class="banner">
-	<ul class="nav nav-pills banner-inner" role="tablist">
-	  {{#each campus_office}}
-	  <li class="{{#unless @index}}active{{/unless}}">
-	  	<a href="#tab-{{@index}}"  role="tab" data-toggle="pill">{{title}}</a>
-	  </li>
-	  {{/each}}  
-	</ul>
-</div>
-<div class="tab-content">
-  {{#each campus_office}}
-  <div class="office-image-container tab-pane fade {{#unless @index}}in active{{/unless}}" id="tab-{{@index}}">
-  	<img class="office-image" src="{{image}}" />
-  </div>
-  {{/each}}
-</div>
+{{#if campus_office}}
+    <div class="banner">
+    	<ul class="nav nav-pills banner-inner" role="tablist">
+    	  {{#each campus_office}}
+    	  <li class="{{#unless @index}}active{{/unless}}">
+    	  	<a href="#tab-{{@index}}"  role="tab" data-toggle="pill">{{title}}</a>
+    	  </li>
+    	  {{/each}}  
+    	</ul>
+    </div>
+    <div class="tab-content">
+      {{#each campus_office}}
+      <div class="office-image-container tab-pane fade {{#unless @index}}in active{{/unless}}" id="tab-{{@index}}">
+      	<img class="office-image" src="{{image}}" />
+      </div>
+      {{/each}}
+    </div>
+{{else}}
+   <div class="noresult">
+        No Layout Image Uploaded.
+   </div>
+{{/if}}
