--- a/js/app/templates/partials/projectmanage.html
+++ b/js/app/templates/partials/projectmanage.html
@@ -1,8 +1,14 @@
+{{#if campus_office}}
 <div class="container row pm-images">
     {{#each campus_office}}
     <figure class="col-md-3 col-sm-4 col-xs-6 pm-image" data-item-index="{{@index}}">
         <img class="img-responsive" src="{{image}}" />
-        <figcaption class="pm-image-desc">{{title}}</figcaption>
+        <figcaption class="pm-image-desc">{{#if title}}{{title}}{{else}} No Title {{/if}}</figcaption>
     </figure>
     {{/each}}
 </div>
+{{else}}
+<div class="pm-images noresult">
+No Project Images Uploaded
+</div>
+{{/if}}
